# docx-converter

./: README.md  pyproject.toml  run_tests.py
.github/workflows/: ci.yml
docx2llm/: __init__.py  builder.py  cli.py  converter.py  notes.py  numbering.py  parser.py  relations.py  styles.py
tests/: build_fixtures.py  test_converter.py
