[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "docx2llm"
version = "1.0.0"
description = "DOCX → token-optimized HTML5 for LLM ingestion"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["docx", "llm", "html", "converter", "openxml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: HTML",
]

# Zero runtime dependencies — stdlib only
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.scripts]
docx2llm = "docx2llm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["docx2llm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
